--- a/style.css
+++ b/style.css
@@ -1,4 +1,4 @@
-#navigation
+/* #navigation
 {
     height: 7vh !important;
 }
@@ -7,7 +7,7 @@
 #searchTxt
 {
     height: 4vh;
-}
+} */
 body{
     background-color: rgb(215, 246, 255) !important;
 }
