--- a/style.css
+++ b/style.css
@@ -1,3 +1,7 @@
+body{
+    color: aliceblue !important;
+    background-color: rgb(0, 0, 0) !important;
+}
 /* #navigation
 {
     height: 7vh !important;
@@ -8,9 +12,7 @@
 {
     height: 4vh;
 } */
-body{
-    background-color: rgb(215, 246, 255) !important;
-}
+
 .notes-input
 {
     /* margin: 3% 2% !important; */
@@ -20,6 +22,14 @@ body{
     
 }
 
+#searchBtn{
+    margin-top: 2vh !important;
+}
+
+#searchTxt
+{
+    margin-top: 2vh !important;
+}
 #addBtn
 {
     width: 100px !important;
@@ -31,12 +41,12 @@ body{
     
 }
 .card{
-    background-color: rgb(229, 249, 255)!important;
+    background-color: rgb(0, 12, 29)!important;
 }
 #floatingTextarea
 {
     height: 20vh;
-    background-color: rgb(229, 249, 255)!important;
+    background-color: rgb(0, 12, 29)!important;
 }
 
 .note-heading
